--- a/uimodule/webapp/css/style.css
+++ b/uimodule/webapp/css/style.css
@@ -1,1 +1,5 @@
 /* Enter your custom styles here */
+.sapUxAPObjectPageSection .sapUxAPObjectPageSectionContainer .sapUxAPObjectPageSubSection .sapUxAPBlockContainer {
+    padding-bottom: 0;
+    PADDING: unset !important;
+}
